[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://platformerArt_v4/png/enemies/slime_normal.png" type="Texture" id=2]
[ext_resource path="res://platformerArt_v4/png/enemies/slime_ded.png" type="Texture" id=3]
[ext_resource path="res://platformerArt_v4/png/enemies/slime_walk.png" type="Texture" id=4]
[ext_resource path="res://platformerArt_v4/png/enemies/slime_jump.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Slime/slime-jump.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Slime/slime-death.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CircleShape2D" id=3]
radius = 14.1421

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Falling"
offset = Vector2( 0, 1.5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 2 )
frames = SubResource( 1 )
animation = "Falling"
offset = Vector2( 0, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.3, 1 )
shape = SubResource( 3 )

[node name="Floor" type="RayCast2D" parent="."]
position = Vector2( 18, 15 )
rotation = 1.5708
scale = Vector2( 1, 0.625 )
enabled = true
collision_mask = 3

[node name="Head" type="RayCast2D" parent="."]
position = Vector2( 12, -15 )
rotation = 1.5708
scale = Vector2( 1, 0.45 )
enabled = true
collision_mask = 2

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 20, -14 )
scale = Vector2( 1, 0.5 )
enabled = true
collision_mask = 3

[node name="Right_ledge" type="RayCast2D" parent="."]
position = Vector2( 24, 15 )
scale = Vector2( 1, 0.5 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -20, -14 )
scale = Vector2( 1, 0.5 )
enabled = true
collision_mask = 3

[node name="Left_ledge" type="RayCast2D" parent="."]
position = Vector2( -24, 15 )
scale = Vector2( 1, 0.5 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="JumpingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
